now we can render a sprite/ NO ONCE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,9 @@ FetchContent_MakeAvailable(SFML)
 
 add_executable(main src/main.cpp 
                 src/Core/Logger.cpp
-                src/Core/Engine.cpp)#сюда вписываем все компоненты для компиляции
+                src/Core/Engine.cpp
+                src/Graphics/RenderSystem.cpp
+                src/Graphics/SpriteObject.cpp)#сюда вписываем все компоненты для компиляции
 target_link_libraries(main PRIVATE sfml-graphics)
 target_compile_features(main PRIVATE cxx_std_17)
 
