--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(main src/main.cpp
                 src/Core/Engine.cpp
                 src/Graphics/RenderSystem.cpp
                 src/Graphics/SpriteObject.cpp
+                src/Graphics/Hitbox.cpp
                 src/Utils/EventManeger.cpp)#сюда вписываем все компоненты для компиляции
 target_link_libraries(main PRIVATE sfml-graphics)
 target_compile_features(main PRIVATE cxx_std_17)
