dynamic draw Collider,  add settings for RenderSystem,

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ add_executable(main src/main.cpp
                 src/Graphics/RenderSystem.cpp
                 src/Graphics/SpriteObject.cpp
                 src/Graphics/Hitbox.cpp
+                src/Physics/Collider.cpp
                 src/Utils/EventManeger.cpp)#сюда вписываем все компоненты для компиляции
 target_link_libraries(main PRIVATE sfml-graphics)
 target_compile_features(main PRIVATE cxx_std_17)
