I have already for start to develop example game

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,14 +10,14 @@ FetchContent_Declare(SFML
     GIT_TAG 2.6.x)
 FetchContent_MakeAvailable(SFML)
 
-add_executable(main src/main.cpp 
-                src/Core/Logger.cpp
+add_executable(main example/myGame/src/main.cpp 
                 src/Core/Engine.cpp
                 src/Graphics/RenderSystem.cpp
                 src/Graphics/SpriteObject.cpp
                 src/Graphics/Hitbox.cpp
                 src/Physics/Collider.cpp
-                src/Utils/EventManeger.cpp)#сюда вписываем все компоненты для компиляции
+                src/Utils/EventManeger.cpp
+                src/Utils/EntityManeger.cpp)#сюда вписываем все компоненты для компиляции
 target_link_libraries(main PRIVATE sfml-graphics)
 target_compile_features(main PRIVATE cxx_std_17)
 
